# sift

./: .gitignore  .runemodules  AGENTS.md  CHANGELOG.md  LICENSE  README.md  openapi.yaml  pyproject.toml
.agents/skills/dspy/: SKILL.md
.agents/skills/langfuse/: SKILL.md
.agents/skills/litellm/: SKILL.md
.agents/skills/lume-python/: SKILL.md
.agents/skills/oort-python/: SKILL.md
.agents/skills/windmill/: SKILL.md
.agents/skills/worldline-python/: SKILL.md
.github/workflows/: release.yaml  sync.yaml
apps/sift-api/: pyproject.toml  rt.d.ts  wmill-lock.yaml  wmill.yaml
apps/sift-api/f/sift/: agents.py  agents.script.yaml  folder.meta.yaml  langfuse_base_url.variable.yaml  responses.py  responses.script.yaml
apps/sift-api/tests/manual/: test_agents.py  test_responses.py
apps/sift-api/tests/unit/f/sift/: test_agents.py  test_responses.py
docs/: api-reference.md
