[project]
name = "sift-workspace"
version = "0.1.0"
description = "Sift Workspace"
requires-python = ">=3.11"
authors = [
    {name = "Aurumor", email = "hello@aurumor.com"},
]

[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = ["packages/*", "apps/*"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"packages/sift/pyproject.toml" = [
    'version = "{version}"',
]
"packages/sift/src/sift/__init__.py" = [
    '__version__ = "{version}"',
]
"apps/sift-api/f/sift/*.py" = [
    '"sift @ git+https://github.com/aurumorinc/sift.git@{version}#subdirectory=packages/sift",',
]
[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-vcr>=1.0.2",
    "vcrpy>=8.2.1",
    "ruff>=0.15.20",
    "mkinit>=1.2.0",
    "pyrefly>=1.1.1",
]
