[project]
name = "sift-workspace"
version = "0.11.0"
description = "Sift is an API-driven platform for defining, managing, and executing DSPy-based AI agents."
authors = [
    {name = "Aryan Singh", email = "aryan.singh@aurumor.com"},
]

requires-python = "<3.14,>=3.11"
dependencies = ["httpx>=0.28.1", "litellm>=1.89.4", "pydantic-settings>=2.14.2", "langfuse>=4.12.0", "dspy-ai>=3.2.1", "worldline @ git+https://github.com/aurumorinc/worldline-python.git"]

[tool.bumpver]
current_version = "0.11.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"packages/sift/pyproject.toml" = [
    'version = "{version}"',
]
"packages/sift/src/sift/__init__.py" = [
    '__version__ = "{version}"',
]
"apps/sift-api/f/sift/*.py" = [
    '"sift @ git+https://github.com/aurumorinc/sift.git@{version}#subdirectory=packages/sift",',
]


[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = ["packages/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "pytest-vcr>=1.0.2",
    "vcrpy>=8.2.1",
    "ruff>=0.15.20",
    "mkinit>=1.2.0",
    "pyrefly>=1.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
[tool.uv.sources]
sift = { workspace = true }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
